<resources>
    <string name="DEFAULT_INSTITUTION">Bali Ayu App</string>
    <string name="app_name">MOBILE POS</string>
    <string name="app_name_DASHBOARD">MOBILE POS DASHBOARD</string>
    <string name="webService">https://srsmobile.balisoket.com/api</string>
    <string name="hashKey">B4l14yu4pp</string>
    <string name="btnSimpan">Simpan</string>
    <string name="btnCancel">Batal</string>
    <string name="btnBack">Kembali</string>
    <string name="btnLogin">Login</string>
    <string name="BTN_OK">OK</string>
    <string name="BTN_POSTING">Kirim</string>
    <string name="BTN_NEXT">Lanjut</string>
    <string name="UserName">User Name</string>
    <string name="Password">Password</string>
    <string name="Activity_Setting_Caption">Pengaturan</string>
    <string name="Institution_Code_Caption">Kode Institusi</string>
    <string name="Institution_Code_Input_Caption">Input Kode Institusi</string>
    <string name="INPUT_PIN_CAPTION">Input PIN !</string>
    <string name="INVALID_PIN_CAPTION">Invalid PIN…</string>
    <string name="PIN_SETTINGS">1976</string>
    <string name="POS_SALE_CAPTION">Sale</string>
    <string name="POS_REFUND_CAPTION">Refund</string>
    <string name="POS_OPNAME_CAPTION">Input Opname</string>
    <string name="DAFTAR_PRODUK_CAPTION">Daftar Produk</string>
    <string name="REKAP_OPNAME_CAPTION">Rekap Opname</string>
    <string name="EXIT_CAPTION">Keluar</string>
    <string name="AVAILABLE_SOON">Will be Available Soon …!!</string>
    <string name="OPNAME_TIDAK_AKTIF">Tidak ada Opname yang aktif …!</string>
    <string name="TITIK_DUA"> : </string>
    <string name="SKU_CAPTION">SKU/ Kode Produk</string>
    <string name="INPUT_SKU">Input SKU/ Kode Produk</string>
    <string name="KODE_OPNAME">Kode Opname</string>
    <string name="SKU">SKU</string>
    <string name="NAMA_PRODUK">Produk</string>
    <string name="HARGA">Harga</string>
    <string name="OPNAME_TOKO">Opname Toko</string>
    <string name="OPNAME_GUDANG">Opname Gudang</string>
    <string name="PRODUK_TIDAK_ADA">Produk tidak ditemukan …!</string>
    <string name="INVALID_INPUT_OPNAME">Invalid Input Opname !</string>
    <string name="FOOTER_MAIN">Developed by @fjpranadi</string>
    <string name="BTN_SCAN">Scan QR/Bar Code</string>
    <string name="BTN_SCAN1">Scan</string>
    <string name="BTN_SIMPAN_OPNAME">Simpan Hasil Opname</string>
    <string name="QTY_OPNAMEGUDANG">Input Hasil Opname Gudang</string>
    <string name="QTY_OPNAMETOKO">Input Hasil Opname Toko</string>
    <string name="HASIL_INPUT_OPNAME">Hasil Input Opname</string>
    <string name="SHARE">Share</string>
    <string name="INPUT_OPNAME">Input Opname</string>
</resources>