<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_biru_putih"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/imageViewLogo_Main"
            android:layout_width="147dp"
            android:layout_height="162dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/DEFAULT_INSTITUTION"
            app:srcCompat="@drawable/logokamadhuk" />

        <TextView
            android:id="@+id/textViewInstitutionName_Main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageViewLogo_Main"
            android:layout_marginTop="6dp"
            android:fontFamily="sans-serif"
            android:text="@string/DEFAULT_INSTITUTION"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#000000"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewInstitutionName2_Main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewInstitutionName_Main"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"

            android:text="@string/app_name"
            android:textColor="@color/teal_700"
            android:textSize="24sp"
            android:textStyle="italic" />


        <Button
            android:id="@+id/btnLogin_Main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextPassword_Main"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="24dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/rounded_button"
            android:text="@string/btnLogin"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editTextPassword_Main"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextUserName_Main"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="24dp"
            android:autofillHints="@string/Password"
            android:background="@drawable/rounded_edit_text"
            android:ems="10"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:paddingLeft="5sp"
            android:paddingTop="5sp"
            android:paddingRight="5sp"
            android:paddingBottom="5sp"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textColorHighlight="#FFFFFF"
            android:textColorHint="@color/teal_700"
            android:textColorLink="@color/purple_700"
            android:textSize="20sp"
            android:textStyle="normal|bold" />

        <EditText
            android:id="@+id/editTextUserName_Main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewInstitutionName2_Main"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="24dp"
            android:layout_marginTop="128dp"
            android:layout_marginEnd="24dp"
            android:autofillHints="@string/UserName"
            android:background="@drawable/rounded_edit_text"
            android:ems="10"
            android:hint="@string/UserName"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:paddingLeft="5sp"
            android:paddingTop="5sp"
            android:paddingRight="5sp"
            android:paddingBottom="5sp"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textColorHighlight="#FFFFFF"
            android:textColorHint="@color/teal_700"
            android:textColorLink="@color/purple_700"
            android:textSize="20sp"
            android:textStyle="normal|bold" />

        <ImageButton
            android:id="@+id/imageButtonSetting_Main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/textView_Developed"
            android:layout_alignParentEnd="true"
            android:background="@drawable/adminsetting40"
            android:contentDescription="@string/Activity_Setting_Caption"
            android:minWidth="48dp"
            android:minHeight="48dp"
            app:srcCompat="@drawable/adminsetting40" />

        <TextView
            android:id="@+id/textView_Developed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="8dp"
            android:text="@string/FOOTER_MAIN"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="italic" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>