<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OpnameReportActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FAFAFA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/Layout_Header_OpnameReport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="false"
            android:background="@color/teal_700"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewHeader_OpnameReport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="10sp"
                android:layout_marginBottom="10sp"
                android:text="@string/HASIL_INPUT_OPNAME"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/Layout_Institution_OpnameReport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/Layout_Header_OpnameReport"
            android:layout_centerInParent="false"
            android:background="@color/My_Yellow1"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewInstitutionName_OpnameReport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="10sp"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textColor="#546E7A"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/Layout_Main_OpnameReport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/Layout_OpnameReport_Footer"
            android:layout_below="@id/Layout_Institution_OpnameReport"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:paddingRight="5dp"
            android:paddingBottom="5dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/RC_Detail_OpnameReport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:scrollbarStyle="outsideInset"
                android:scrollbars="vertical" />
        </RelativeLayout>

        <LinearLayout

            android:id="@+id/Layout_OpnameReport_Footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/My_Yellow">

                <TextView
                    android:id="@+id/textViewKembali_OpnameReport"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/imageButtonKembali_OpnameReport"
                    android:layout_centerHorizontal="true"
                    android:text="@string/btnBack"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold" />

                <ImageButton
                    android:id="@+id/imageButtonKembali_OpnameReport"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@android:drawable/ic_menu_revert"
                    android:contentDescription="@string/btnCancel"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    app:srcCompat="@android:drawable/ic_menu_revert"
                    tools:ignore="ImageContrastCheck" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/My_Font_Color">

                <ImageButton
                    android:id="@+id/imageButtonSave_OpnameReport"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@android:drawable/ic_menu_share"
                    android:contentDescription="@string/SHARE"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    app:srcCompat="@android:drawable/ic_menu_share"
                    tools:ignore="ImageContrastCheck" />

                <TextView
                    android:id="@+id/textViewSave_OpnameReport"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/imageButtonSave_OpnameReport"
                    android:layout_centerHorizontal="true"
                    android:text="@string/SHARE"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold" />
            </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>