<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".HomeActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:id="@+id/RL_Footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/white">

            <TextView
                android:id="@+id/txtFooter_Home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                android:textColor="@color/My_Font_Color"
                android:textSize="18sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/LL_3_Home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/LL_2_Home"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:paddingTop="24dp"
            android:paddingBottom="24dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/ImageView_Daftar_Produk_Home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:contentDescription="@string/DAFTAR_PRODUK_CAPTION"
                    android:src="@drawable/laporanteller"
                    tools:ignore="ImageContrastCheck" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ImageView_Daftar_Produk_Home"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="16dp"
                    android:paddingTop="10sp"
                    android:paddingBottom="10sp"
                    android:text="@string/DAFTAR_PRODUK_CAPTION"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/white">

                <ImageView
                    android:id="@+id/ImageView_Keluar_Home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:contentDescription="@string/btnBack"
                    android:src="@drawable/keluar" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ImageView_Keluar_Home"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="16dp"
                    android:paddingTop="10sp"
                    android:paddingBottom="10sp"
                    android:text="@string/EXIT_CAPTION"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LL_2_Home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/LL_1_Home"
            android:orientation="horizontal"
            android:paddingTop="24dp"
            android:paddingBottom="24dp"
            android:baselineAligned="false">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/white">

                <ImageView
                    android:id="@+id/ImageView_Input_Opname_Home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:contentDescription="@string/POS_OPNAME_CAPTION"
                    android:src="@drawable/mutasi" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ImageView_Input_Opname_Home"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="16dp"
                    android:paddingTop="10sp"
                    android:paddingBottom="10sp"
                    android:text="@string/POS_OPNAME_CAPTION"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/ImageView_Rekap_Hasil_Opname_Home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:contentDescription="@string/REKAP_OPNAME_CAPTION"
                    android:src="@drawable/mutasi" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ImageView_Rekap_Hasil_Opname_Home"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="16dp"
                    android:paddingTop="10sp"
                    android:paddingBottom="10sp"
                    android:text="@string/REKAP_OPNAME_CAPTION"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </RelativeLayout>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/RL_Header_Home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:background="@color/teal_700">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/app_name_DASHBOARD"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/RL_Header1_Home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/RL_Header_Home"
            android:background="@color/My_Yellow1">

            <TextView
                android:id="@+id/txtInstitutionName_Home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/LL_1_Home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/RL_Header1_Home"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:paddingTop="24dp"
            android:paddingBottom="24dp">

            <RelativeLayout
                android:id="@+id/RL_12_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/white">

                <ImageView
                    android:id="@+id/ImageView_POS_Sale_Home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:contentDescription="@string/POS_SALE_CAPTION"
                    android:src="@drawable/setoran" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ImageView_POS_Sale_Home"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="16dp"
                    android:paddingTop="10sp"
                    android:paddingBottom="10sp"
                    android:text="@string/POS_SALE_CAPTION"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/RL_11_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/white">

                <ImageView
                    android:id="@+id/ImageView_POS_Refund_Home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:contentDescription="@string/POS_REFUND_CAPTION"
                    android:src="@drawable/penarikan" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ImageView_POS_Refund_Home"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="16dp"
                    android:paddingTop="10sp"
                    android:paddingBottom="10sp"
                    android:text="@string/POS_REFUND_CAPTION"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>